backend/infra/k8s/client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: esgivroom/front
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: front-srv
spec:
  selector:
    app: front
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
