backend/infra/k8s/moto-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moto-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moto
  template:
    metadata:
      labels:
        app: moto
    spec:
      containers:
        - name: moto
          image: esgivroom/moto
---
apiVersion: v1
kind: Service
metadata:
  name: moto-srv
spec:
  selector:
    app: moto
  ports:
    - name: moto
      protocol: TCP
      port: 3000
      targetPort: 3000
