backend/infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: esgivroom.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/moto/?(.*) 
            pathType: Prefix     
            backend:
              service:
                name: moto-srv
                port:
                  number: 3000  
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: front-srv
                port:
                  number: 3000
